--- a/ExternalMergeSortLab/ExternalMergeSortLab.csproj
+++ b/ExternalMergeSortLab/ExternalMergeSortLab.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D04D0F50-413C-4812-84B8-9E239BF628E6}</ProjectGuid>
+    <ProjectGuid>{B23C882A-95A9-4BCB-8AE5-BFB374FFB692}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>MergeSort2</RootNamespace>
-    <AssemblyName>MergeSort2</AssemblyName>
+    <RootNamespace>ExternalMergeSortLab</RootNamespace>
+    <AssemblyName>ExternalMergeSortLab</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
